[gd_scene load_steps=17 format=3 uid="uid://dgjm417weplte"]

[ext_resource type="Script" path="res://Scripts/pet/dead_rogue.gd" id="1_ylu7w"]
[ext_resource type="Texture2D" uid="uid://benpxihvb6a3r" path="res://Assets/Sprites/pets/ghostly_rogue.png" id="3_fknwa"]
[ext_resource type="AudioStream" uid="uid://da2jep71daunv" path="res://Assets/Audio/pets/ghost_rogue_enter.mp3" id="4_165qt"]
[ext_resource type="AudioStream" uid="uid://c120pte0wgt4r" path="res://Assets/Audio/sound effects/woosh_sfx.mp3" id="6_36ndo"]

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_1usde"]
parameter_name = "tint"
default_value_enabled = true

[sub_resource type="VisualShaderNodeBooleanParameter" id="VisualShaderNodeBooleanParameter_0bbl4"]
parameter_name = "enabled"
default_value_enabled = true

[sub_resource type="VisualShaderNodeIf" id="VisualShaderNodeIf_mj86h"]
default_input_values = [0, 0.0, 1, 1.0, 2, 1e-05, 3, Vector3(0, 0, 0), 4, Vector3(0, 0, 0), 5, Vector3(0, 0, 0)]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_3k7k7"]
input_name = "color"

[sub_resource type="VisualShader" id="VisualShader_umxg4"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform bool enabled = false;
uniform vec4 tint : source_color = vec4(1.000000, 1.000000, 1.000000, 1.000000);



void fragment() {
// BooleanParameter:3
	bool n_out3p0 = enabled;


// ColorParameter:2
	vec4 n_out2p0 = tint;


// Input:5
	vec4 n_out5p0 = COLOR;


	vec3 n_out4p0;
// If:4
	float n_in4p1 = 1.00000;
	float n_in4p2 = 0.00001;
	if(abs((n_out3p0 ? 1.0 : 0.0) - n_in4p1) < n_in4p2)
	{
		n_out4p0 = vec3(n_out2p0.xyz);
	}
	else if((n_out3p0 ? 1.0 : 0.0) < n_in4p1)
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}
	else
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}


// Output:0
	COLOR.rgb = n_out4p0;


}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(520, 260)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_1usde")
nodes/fragment/2/position = Vector2(-480, 360)
nodes/fragment/3/node = SubResource("VisualShaderNodeBooleanParameter_0bbl4")
nodes/fragment/3/position = Vector2(-480, 140)
nodes/fragment/4/node = SubResource("VisualShaderNodeIf_mj86h")
nodes/fragment/4/position = Vector2(200, 280)
nodes/fragment/5/node = SubResource("VisualShaderNodeInput_3k7k7")
nodes/fragment/5/position = Vector2(-220, 560)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 0, 2, 0, 4, 3, 4, 0, 0, 0, 5, 0, 4, 4, 5, 0, 4, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8as0q"]
shader = SubResource("VisualShader_umxg4")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.752941, 0.819608, 0.8, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg5by"]
atlas = ExtResource("3_fknwa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyggw"]
atlas = ExtResource("3_fknwa")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnaug"]
atlas = ExtResource("3_fknwa")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbgu2"]
atlas = ExtResource("3_fknwa")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xl7t5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg5by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyggw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnaug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbgu2")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7uyc8"]
radius = 6.0

[node name="dead_rogue" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ylu7w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8as0q")
sprite_frames = SubResource("SpriteFrames_xl7t5")
autoplay = "default"

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7uyc8")

[node name="enter_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_165qt")
bus = &"Sound Effect"

[node name="attack_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="woosh_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -4)
stream = ExtResource("6_36ndo")
bus = &"Sound Effect"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
